# memento

./: .env.example  .gitignore  AGENTS.md  Dockerfile  IDEA.md  README.md  docker-compose.yml  opencode.json  pyproject.toml  tmp-strategy.md
.agents/skills/agent-governance/: SKILL.md
.agents/skills/python-mcp-server/: SKILL.md
.agents/skills/python-mcp-server/evals/: evals.json
.github/agents/: dev-task-executor.agent.md  enterprise-architect-expert.agent.md
.github/instructions/: python-mcp-server.instructions.md
docs/: TRD.md  plan.md  tasks.md
memento/: __init__.py  config.py  main.py  scheduler.py
memento/jobs/: __init__.py  consolidation.py
memento/mcp/: __init__.py  server.py
memento/memory/: __init__.py  schema.py
memento/stores/: __init__.py  base.py  graphiti_store.py  mem0_store.py  session_store.py
tests/: conftest.py
tests/e2e/: conftest.py  test_core_loop.py
tests/integration/: conftest.py  test_consolidation.py  test_context_assembly.py  test_graphiti_store.py  test_health_integration.py  test_mcp_tools.py  test_mem0_store.py  test_session_lifecycle.py
tests/unit/: test_config.py  test_consolidation.py  test_graphiti_store.py  test_health.py  test_mcp_server.py  test_mem0_store.py  test_scheduler.py  test_schema.py  test_session_store.py
